# asimov-contact

./: .gitignore  LICENSE  README.md  requirements.txt  setup.py  sonar-project.properties
.github/workflows/: sonarcloud.yml  test-app.yml
cpp/: CMakeLists.txt  Contact.cpp  Contact.h  Contact.hpp  DOLFINX_CONTACTConfig.cmake.in  KernelData.cpp  KernelData.h  MeshTie.cpp  MeshTie.h  NewContact.hpp  QuadratureRule.cpp  QuadratureRule.h  RayTracing.cpp  RayTracing.h  SubMesh.cpp  SubMesh.h  coefficients.cpp  coefficients.h  contact_kernels.cpp  contact_kernels.h  contact_kernels.hpp  elasticity.cpp  elasticity.h  error_handling.cpp  error_handling.h  geometric_quantities.cpp  geometric_quantities.h  meshtie_kernels.cpp  meshtie_kernels.h  parallel_mesh_ghosting.cpp  parallel_mesh_ghosting.h  point_cloud.cpp  point_cloud.h  rigid_surface_kernels.cpp  rigid_surface_kernels.h  unbiased_kernels.cpp  unbiased_kernels.h  utils.cpp  utils.h  utils.hpp
cpp/demos/: CMakeLists.txt
cpp/demos/meshes/: box_3D.xdmf  cont-blocks_sk24_fnx.xdmf
cpp/demos/meshtie/: CMakeLists.txt  linear_elasticity.py  main.cpp
cpp/demos/meshtieHeatEquation/: CMakeLists.txt  heat_equation.py  main.cpp
cpp/demos/meshtieHeatTransfer/: CMakeLists.txt  main.cpp  thermo_elasticity.py
cpp/demos/meshtieLarge/: CMakeLists.txt  linear_elasticity.py  main.cpp
cpp/demos/meshtieNewton/: CMakeLists.txt  linear_elasticity.py  main.cpp
cpp/doc/: Doxyfile
implementation/: README.md  compare_nitsche_snes.py  create_circle.py  create_contact_meshes.py  create_disk_plane.py  create_mesh.py  gradual_loading.py  helpers.py  nitsche_bc_plane_stress_beam_test.py  nitsche_euler_bernoulli.py  nitsche_one_way.py  nitsche_rigid_surface.py  penalty.py  snes_against_plane.py  snes_disk_against_plane.py  test_dist_vec.py  test_nitsche_rigid_surface.py
implementation/demos/: compare_cuas_snes.py  compare_nitsche_snes.py  nitsche_bc_plane_stress_beam_test.py  nitsche_euler_bernoulli.py  test_nitsche_rigid_surface_cuas.py
implementation/dolfinx_contact/: create_contact_meshes.py  create_mesh.py  helpers.py  nitsche_cuas.py  nitsche_one_way.py  nitsche_rigid_surface_cuas.py  snes_against_plane.py
implementation/tests/: test_dolfinx_cuas.py
literature_review/: references.bib  review.tex
nastran-convert/: nastran.py
python/: CMakeLists.txt  README.md  build-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
python/demos/: Makefile  box_2D.h5  box_2D.xdmf  box_key_3D.py  christmas_tree.py  compare_cuas_snes.py  compare_cuas_snes_one_sided.py  compare_custom_snes_one_sided.py  compare_nitsche_snes.py  debug.py  demo_christmas_tree.py  demo_christmas_tree_3D.py  demo_friction_cylinder_box.py  demo_friction_cylinders.py  demo_friction_cylinders_force_driven.py  demo_hertzian_contact.py  demo_nitsche_meshties.py  demo_nitsche_rigid_surface_cuas.py  demo_nitsche_rigid_surface_custom.py  demo_nitsche_rigid_surface_ufl.py  demo_nitsche_unbiased.py  demo_sliding_wedges.py  demo_thermo_mech_boxkey3D.py  demo_thermo_mech_xmas2D.py  gap_function.py  gmsh_convert.py  gradual_loading.py  make_3d.py  meshtie_convergence.py  new_demo_christmas_tree.py  new_demo_compare_nitsche_snes.py  new_demo_custom_snes_one_sided.py  new_demo_nitsche_euler_bernoulli.py  new_demo_nitsche_rigid_surface_custom.py  new_demo_nitsche_rigid_surface_ufl.py  nitsche_bc_plane_stress_beam_test.py  nitsche_euler_bernoulli.py  nitsche_unbiased_demo.py  parallel_mesh_ghosting.py  pytest.ini  (+6 more)
python/demos/hertz_contact/: demo_friction_cylinders.py  demo_friction_cylinders_force_driven.py  demo_hertzian_contact.py
python/demos/meshes/: xmas_tree.xdmf
python/demos/meshtie_demos/: blocks_nitsche_meshtie.py  demo_poisson.py  meshtie_convergence.py  poisson_convergence.py  thermo_mech.py
python/demos/meshtie_demos/meshes/: cont-blocks_sk24_fnx.h5
python/demos/newton.bp/: md.0  md.idx
python/demos/oxford/: blocks_nitsche.py  blocks_nitsche_meshtie.py  box_3D.h5  box_3D.xdmf
python/demos/ubar.bp/: profiling.json
python/dolfinx_contact/: __init__.py  array.h  build_gap_function.py  caster_petsc.h  create_contact_meshes.py  gradual_loading.py  helpers.py  kernelwrapper.h  newton_solver.py  nitsche_cuas.py  nitsche_one_way.py  nitsche_rigid_surface.py  nitsche_rigid_surface_cuas.py  nitsche_unbiased.py  output.py  parallel_mesh_ghosting.py  plotting.py  snes_against_plane.py  wrappers.cpp
python/dolfinx_contact/general_contact/: __init__.py  contact_problem.py
python/dolfinx_contact/meshing/: __init__.py  christmas_tree.py  contact_meshes.py  hexahedral_meshes.py  onesided_meshes.py  split_box.py  test_mesh.py  utils.py
python/dolfinx_contact/meshtie/: __init__.py  nitsche_meshtie.py
python/dolfinx_contact/one_sided/: __init__.py  nitsche_cuas.py  nitsche_custom.py  nitsche_rigid_surface.py  nitsche_rigid_surface_cuas.py  nitsche_rigid_surface_custom.py  nitsche_ufl.py  snes_against_plane.py
python/dolfinx_contact/unbiased/: __init__.py  contact_problem.py  contact_problem_new.py  nitsche_pseudo_time.py  nitsche_unbiased.py  nitsche_unbiased_ray.py  nitsche_variable_gap.py
python/tests/: create_test_meshes.py  mwe.py  new_contact.py  test_circumradius.py  test_coeffs.py  test_contact_kernels.py  test_copy_to_submesh.py  test_dolfinx_cuas.py  test_dolfinx_custom.py  test_nitsche_bc_plane_stress_beam.py  test_pack_u.py  test_packing_contact.py  test_projection.py  test_raytracing.py  test_unbiased.py
results/: numerical_results.tex
